--- a/predavanje6 - ejs/views/partials/nav.ejs
+++ b/predavanje6 - ejs/views/partials/nav.ejs
@@ -1,8 +1,10 @@
 <nav>
-  <ul class="list-unstyled text-end">
-    <li><a href="/">View All Recipes</a></li>
-    <li><a href="/new-recipe">Add New Recipe</a></li>
-    <li><a href="/about">About Us</a></li>
+  <ul class="list-unstyled d-flex justify-content-end gap-4 text-uppercase">
+    <li><a class="text-decoration-none" href="/">View All Recipes</a></li>
+    <li>
+      <a class="text-decoration-none" href="/new-recipe">Add New Recipe</a>
+    </li>
+    <li><a class="text-decoration-none" href="/about">About Us</a></li>
   </ul>
 </nav>
 <hr class="border border-primary border-3 opacity-75" />
