--- a/predavanje6 - ejs/views/about.ejs
+++ b/predavanje6 - ejs/views/about.ejs
@@ -3,9 +3,9 @@
   <%- include("./partials/head.ejs") %>
   <body>
     <div class="container">
-      <h1 class="text-center mt-3"><%= title %></h1>
+      <h2 class="text-center mt-3"><%= title %></h2>
       <%- include("./partials/nav.ejs") %>
-      <p class="container">
+      <p class="container w-75 p-4">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio autem
         dicta magni veniam fugiat quae laborum, maxime molestiae accusamus
         veritatis adipisci ipsam deserunt quod rem vitae temporibus assumenda
