--- a/predavanje6 - ejs/views/recipes.ejs
+++ b/predavanje6 - ejs/views/recipes.ejs
@@ -3,13 +3,19 @@
   <%- include("./partials/head.ejs") %>
   <body>
     <div class="container">
-      <h1 class="text-center mt-3"><%= title %></h1>
+      <h2 class="text-center mt-3"><%= title %></h2>
       <%- include("./partials/nav.ejs") %> <% if(recipes.length > 0){ %>
       <ul>
         <% recipes.forEach((recipe) => { %>
         <li class="container list-unstyled border-bottom p-3">
-          <h6><%= recipe.name %></h6>
-          <p>Ingredients : <%= recipe.ingredients %></p>
+          <h5 class="mb-3"><%= recipe.name %></h5>
+          <p class="mb-1">
+            <strong>Total Time: </strong> <%= recipe.total_time %>
+          </p>
+          <p class="mb-1"><strong>Serves: </strong><%= recipe.serves %></p>
+          <p class="mb-1">
+            <strong>Ingredients: </strong> <%= recipe.ingredients %>
+          </p>
         </li>
         <% } ) %>
       </ul>
